--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "morgan": "~1.9.0",
     "njwt": "^0.4.0",
     "nodemon": "^1.17.5",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
     "stellar-sdk": "^0.8.1"
   }
 }
