--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.281.1",
     "bcrypt": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
@@ -15,10 +16,14 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "joi": "^13.3.0",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.4",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
+    "multer-s3": "^2.7.0",
     "njwt": "^0.4.0",
     "nodemon": "^1.17.5",
+    "shortid": "^2.2.12",
     "stellar-sdk": "^0.8.1"
   }
 }
