--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "payment-service",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "node $NODE_DEBUG_OPTION ./bin/www",
+    "dev": "nodemon $NODE_DEBUG_OPTION ./bin/www"
   },
   "dependencies": {
     "aws-sdk": "^2.281.1",
     "bcrypt": "^2.0.1",
+    "coinpayments": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
+    "everlife-token-sale-model": "everlifeai/everlife-token-sale-model#1.0.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "joi": "^13.3.0",
@@ -26,6 +28,7 @@
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "shortid": "^2.2.12",
-    "stellar-sdk": "^0.10.1"
+    "stellar-sdk": "^0.10.1",
+    "uuid": "^3.3.2"
   }
 }
