--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.2",
     "joi": "^13.3.0",
     "jsonwebtoken": "^8.3.0",
+    "mailgun-js": "^0.21.0",
     "mongoose": "^5.1.4",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
