--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer-s3": "^2.7.0",
     "njwt": "^0.4.0",
     "nodemon": "^1.17.5",
+    "pug": "^2.0.3",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "shortid": "^2.2.12",
